# arc-agente02

./: .gitignore  ARC_PRIZE_FINAL_SUMMARY.md  ARC_PRIZE_INTEGRATION.md  ARC_PRIZE_PERFORMANCE_GUIDE.md  CONTINUAMOS.sh  CONTINUITY_SESSION22.md  DISEÑO_Y_DESARROLLO_DEL_AGENTE02.md  Dockerfile  FINAL_SUMMARY.md  HITOS_DESARROLLO.md  PHASE_2_COMPLETION.md  PROGRESO.md  PROJECT_COMPLETION_REPORT.md  README.md  SIMULATOR_GUIDE.md  START_SESSION_23.md  VALIDATION_GUIDE.md  benchmark_live.py  docker-compose.yml  push_to_github.sh  pyproject.toml  requirements-dev.txt  requirements.txt  simulator.py  test_arc_prize_integration.py  validate_agent.py
docs/: PROYECTO_FUNDACIONAL.md  RESUMEN_EJECUTIVO.md
examples/: test_arc_prize.py
src/: __init__.py  agent_validator.py  arc_grid_adapter.py  arc_integration_bridge.py  arc_plan_executor.py  arc_prize_adapter.py  arc_prize_performance.py  arc_test_bench.py  constrained_planner.py  experience_learner.py  explorer.py  extension_l3.py  inductor_reglas.py  mapeador.py  multi_vida.py  online_replanner.py  pattern_database.py  perceptor.py  planificador.py  renderizador.py  supervisor.py  teleporter_optimizer.py  types.py
tests/: __init__.py  test_constrained_planner.py  test_experience_learner.py  test_explorer.py  test_extension_l3.py  test_inductor_reglas.py  test_integration_suite.py  test_mapeador.py  test_multi_vida.py  test_online_replanner.py  test_pattern_database.py  test_perceptor.py  test_performance_benchmarks.py  test_planificador.py  test_renderizador.py  test_supervisor.py  test_teleporter_optimizer.py
