[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-agente02"
version = "0.1.0"
description = "Symbolic learning agent for ARC-AGI-3 maze problems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Carlos Ponce Schaller", email = "desarrollo.profesional.cp11@gmail.com"},
    {name = "Claude (Anthropic)"}
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
    "pydantic>=1.8.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.7b0",
    "isort>=5.9.0",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/yourname/arc-agente02"
Documentation = "https://github.com/yourname/arc-agente02/wiki"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
